[tool.poetry]
name = "Qtica"
version = "0.2.1"
description = "Qtica is a Python library that provides a lightweight API around native PySide6, allowing for lightning-fast GUI prototyping using modern declarative UI techniques entirely within Python."
authors = ["Osama Mohammed Al-zabidi <omamkaz@gmail.com>"]
license = "GPL-3.0"
readme = ["README.md", "CHANGELOG.md"]
keywords = [
    "qt",
    "pyside6",
    "python",
    "declarative",
    "qml",
    "Qtica",
    "fast",
    "easy",
]
documentation = "https://omamkaz.gitbook.io/qtica"
repository = "https://github.com/omamkaz/Qtica"
packages = [{ include = "Qtica" }]

[tool.poetry.dependencies]
python = ">= 3.10, < 3.12"
PySide6 = "^6.5"

pynput = { version = "^1.7.6", optional = true }
ElusiveIcons = { version = "^1.0", optional = true }
FeatherIcons = { version = "^1.0", optional = true }
FluentIcons = { version = "^1.0", optional = true }
FontawesomeIcons = { version = "^1.0", optional = true }
MaterialIcons = { version = "^1.0", optional = true }

[tool.poetry.extras]
ElusiveIcons = ["ElusiveIcons"]
FeatherIcons = ["FeatherIcons"]
FluentIcons = ["FluentIcons"]
FontawesomeIcons = ["FontawesomeIcons"]
MaterialIcons = ["MaterialIcons"]
pynput = ["pynput"]
icons = [
    "ElusiveIcons",
    "FeatherIcons",
    "FluentIcons",
    "FontawesomeIcons",
    "MaterialIcons",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
