[tool.poetry]
name = "Qtica"
version = "0.4.4"
description = "Qtica is a Python library that offers a lightweight API built around native PySide6. It enables swift GUI prototyping utilizing contemporary declarative UI methods, all within Python."
authors = ["Osama Mohammed Al-zabidi <qticaproject@gmail.com>"]
license = "GPL-3.0"
readme = ["README.md", "CHANGELOG.md"]
keywords = [
    "qt",
    "pyside6",
    "python",
    "declarative",
    "qml",
    "Qtica",
    "fast",
    "easy",
    "toolkit",
    "tools"
]
documentation = "https://qticaproject.gitbook.io/qtica"
repository = "https://github.com/qtica-project/Qtica"
packages = [{ include = "Qtica" }]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[tool.poetry.dependencies]
python = ">=3.10, <3.13"
PySide6 = ">=6.5, <6.7"
darkdetect = ">= 0.7"
pynput = { version = "^1.7.6", optional = true }
ElusiveIcons = { version = "^2.0", optional = true }
FeatherIcons = { version = "^2.0", optional = true }
FluentIcons = { version = "^2.0", optional = true }
FontawesomeIcons = { version = "^2.0", optional = true }
MaterialIcons = { version = "^2.0", optional = true }


[tool.poetry.extras]
ElusiveIcons = ["ElusiveIcons"]
FeatherIcons = ["FeatherIcons"]
FluentIcons = ["FluentIcons"]
FontawesomeIcons = ["FontawesomeIcons"]
MaterialIcons = ["MaterialIcons"]
pynput = ["pynput"]
icons = [
    "ElusiveIcons",
    "FeatherIcons",
    "FluentIcons",
    "FontawesomeIcons",
    "MaterialIcons",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
